fix wrong background on phone

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ html {
 body {
   margin: 0;
   height: 100%;
-  background-color: black;
+  background-color: #1e2a42;
 }
 
 body::before {
@@ -18,7 +18,7 @@ body::before {
 
 @media screen and (max-width: 800px), screen and (max-height: 600px) {
   body::before {
-    background: #1e2a42; /* on phone the linear-gradient can get broken if user scrolls fast */
+    background: none; /* on phone the linear-gradient can get broken if user scrolls fast */
   }
 }
 
